--- a/507 Final.ipynb
+++ b/507 Final.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "conn=mysql.connect(host='localhost',port=int(3306),user='root',\n",
-    "                   passwd='931223',db='gravity_books')"
+    "                   passwd='****',db='gravity_books')"
    ]
   },
   {
